--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           “It is easy to sit up and take notice, what's difficult is getting up
           and taking action.”
         </p>
-        <picture class="advice-image">
+        <picture>
           <source
             media="(min-width: 1440px)"
             srcset="./images/pattern-divider-desktop.svg"
@@ -37,7 +37,7 @@
           <img src="./images/pattern-divider-mobile.svg" alt="#" />
         </picture>
         <div class="advice-dice-container">
-          <img class="advice-dice-image" src="./images/icon-dice.svg" alt="#" />
+          <img src="./images/icon-dice.svg" alt="#" />
         </div>
       </div>
     </main>
