--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./script.js defer"></script>
+    <script src="./script.js " defer></script>
     <title>Frontend Mentor | Advice generator app</title>
   </head>
   <body>
@@ -36,9 +36,9 @@
           />
           <img src="./images/pattern-divider-mobile.svg" alt="#" />
         </picture>
-        <div class="advice-dice-container">
+        <button type="button" class="advice-dice-container">
           <img src="./images/icon-dice.svg" alt="#" />
-        </div>
+        </button>
       </div>
     </main>
   </body>
