Render random advice on screen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./script.js " defer></script>
+    <script type="module" src="./script.js " defer></script>
     <title>Frontend Mentor | Advice generator app</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
         <p class="advice-heading">
           Advice <span class="advice-number">#117</span>
         </p>
-        <p class="advice-text">
+        <p advice class="advice-text">
           “It is easy to sit up and take notice, what's difficult is getting up
           and taking action.”
         </p>
@@ -36,7 +36,7 @@
           />
           <img src="./images/pattern-divider-mobile.svg" alt="#" />
         </picture>
-        <button type="button" class="advice-dice-container">
+        <button advice-button type="button" class="advice-dice-container">
           <img src="./images/icon-dice.svg" alt="#" />
         </button>
       </div>
